.provarCaches/00D5f000005vwGkEAI/objects/rstk__fsoackpage__c.object
<CustomObject>
    <description>fsoackpage__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackpage_header__c</fullName>
        <inlineHelpText>Header</inlineHelpText>
        <label>SO Acknowledgement Header</label>
        <referenceTo>rstk__fsoackh__c</referenceTo>
        <relationshipLabel>SO Ack Pages</relationshipLabel>
        <relationshipName>pages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SO Ack Page</label>
    <nameField>
        <label>Ack Dummy Pages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Ack Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>